Workaround for ICE in GCC 4.8 appeared in r196846. https://bugs.webkit.org/show_bug.cgi?id=154535

Patch by Konstantin Tokarev <annulen@yandex.ru> on 2016-02-22
Reviewed by Chris Dumez.

No new tests needed.

* html/HTMLFormElement.cpp:
(WebCore::HTMLFormElement::autocomplete):

Canonical link: https://commits.webkit.org/172652@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196946 268f45cc-cd09-0410-ab3c-d52691b4dbfc